--- a/App1/App1.vcxproj
+++ b/App1/App1.vcxproj
@@ -168,6 +168,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="GPS.h" />
+    <ClInclude Include="Model\ConversionsMaison.h" />
+    <ClInclude Include="Model\Mote.h" />
+    <ClInclude Include="Model\MotesRequest.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="App.xaml.h">
       <DependentUpon>App.xaml</DependentUpon>
@@ -250,6 +253,9 @@
     <ClCompile Include="MainPage.xaml.cpp">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </ClCompile>
+    <ClCompile Include="Model\ConversionsMaison.cpp" />
+    <ClCompile Include="Model\Mote.cpp" />
+    <ClCompile Include="Model\MotesRequest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
